# molly.pageindex

./: .gitignore  README.md  batch_index.py  config.example.yaml  daily_report.py  ecosystem.config.js  indexing.py  main.py  mcp_server.py  pyproject.toml  retrieval.py  run_pageindex.py  search_local.py  settings.py  start_web.sh  web_ui.py
examples/: agentic_vectorless_rag_demo.py  openai_agents_demo.py
examples/workspace/: a861df9e-aa5c-4bb6-93ff-c7095c91838f.json  demo_doc_id.txt
pageindex/: client.py  page_index_md.py  utils.py
